--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   fluro: ^1.5.1
-
+  shared_preferences: ^0.5.4+3
+  path_provider: ^1.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
