--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_snake_navigationbar: ^0.2.0
   flutter_screenutil: ^0.7.0
   photo: ^0.4.5+1
+  event_bus: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
